@@ -1,0 +1,109 @@
+<events>
+<event>
+        <mask>
+                <maskelement>
+                        <mename>id</mename>
+                        <mevalue>.1.3.6.1.4.1.10234.2.1.3</mevalue>
+                </maskelement>
+                <maskelement>
+                        <mename>generic</mename>
+                        <mevalue>6</mevalue>
+                </maskelement>
+                <maskelement>
+                        <mename>specific</mename>
+                        <mevalue>1</mevalue>
+                </maskelement>
+        </mask>
+        <uei>uei.opennms.org/vendor/Snort/traps/sidaAlertGeneric</uei>
+        <event-label>SNORT-INTRUSION-DETECTION-ALERT-MIB defined trap event: sidaAlertGeneric</event-label>
+        <descr>
+&lt;p&gt;The Sida Alert Generic Trap is sent whenever an
+event is detected by snort (rules) and no specific
+Alert is found applicable.&lt;/p&gt;&lt;table&gt;
+        &lt;tr&gt;&lt;td&gt;&lt;b&gt;
+
+        sidaSensorVersion&lt;/b&gt;&lt;/td&gt;&lt;td&gt;
+        %parm[#3]%;&lt;/td&gt;&lt;td&gt;&lt;p;&gt;&lt;/p&gt;&lt;/td;&gt;&lt;/tr&gt;
+        &lt;tr&gt;&lt;td&gt;&lt;b&gt;
+
+        sidaSensorAddressType&lt;/b&gt;&lt;/td&gt;&lt;td&gt;
+        %parm[#4]%;&lt;/td&gt;&lt;td&gt;&lt;p;&gt;
+                unknown(0)
+                ipv4(1)
+                ipv6(2)
+                dns(16)
+        &lt;/p&gt;&lt;/td;&gt;&lt;/tr&gt;
+        &lt;tr&gt;&lt;td&gt;&lt;b&gt;
+
+        sidaSensorAddress&lt;/b&gt;&lt;/td&gt;&lt;td&gt;
+        %parm[#5]%;&lt;/td&gt;&lt;td&gt;&lt;p;&gt;&lt;/p&gt;&lt;/td;&gt;&lt;/tr&gt;
+        &lt;tr&gt;&lt;td&gt;&lt;b&gt;
+
+        sidaAlertTimeStamp&lt;/b&gt;&lt;/td&gt;&lt;td&gt;
+        %parm[#6]%;&lt;/td&gt;&lt;td&gt;&lt;p;&gt;&lt;/p&gt;&lt;/td;&gt;&lt;/tr&gt;
+        &lt;tr&gt;&lt;td&gt;&lt;b&gt;
+
+        sidaAlertMsg&lt;/b&gt;&lt;/td&gt;&lt;td&gt;
+        %parm[#7]%;&lt;/td&gt;&lt;td&gt;&lt;p;&gt;&lt;/p&gt;&lt;/td;&gt;&lt;/tr&gt;
+        &lt;tr&gt;&lt;td&gt;&lt;b&gt;
+
+        sidaAlertMoreInfo&lt;/b&gt;&lt;/td&gt;&lt;td&gt;
+        %parm[#8]%;&lt;/td&gt;&lt;td&gt;&lt;p;&gt;&lt;/p&gt;&lt;/td;&gt;&lt;/tr&gt;
+        &lt;tr&gt;&lt;td&gt;&lt;b&gt;
+<!--
+        sidaAlertProtocol&lt;/b&gt;&lt;/td&gt;&lt;td&gt;
+        %parm[#8]%;&lt;/td&gt;&lt;td&gt;
+        &lt;/td;&gt;&lt;/tr&gt;
+        &lt;tr&gt;&lt;td&gt;&lt;b&gt;
+-->
+        sidaAlertSrcAddressType&lt;/b&gt;&lt;/td&gt;&lt;td&gt;
+        %parm[#9]%;&lt;/td&gt;&lt;td&gt;&lt;p;&gt;
+                unknown(0)
+                ipv4(1)
+                ipv6(2)
+                dns(16)
+        &lt;/p&gt;&lt;/td;&gt;&lt;/tr&gt;
+        &lt;tr&gt;&lt;td&gt;&lt;b&gt;
+
+        sidaAlertSrcAddress&lt;/b&gt;&lt;/td&gt;&lt;td&gt;
+        %parm[#10]%;&lt;/td&gt;&lt;td&gt;&lt;p;&gt;&lt;/p&gt;&lt;/td;&gt;&lt;/tr&gt;
+        &lt;tr&gt;&lt;td&gt;&lt;b&gt;
+
+        sidaAlertDstAddressType&lt;/b&gt;&lt;/td&gt;&lt;td&gt;
+        %parm[#11]%;&lt;/td&gt;&lt;td&gt;&lt;p;&gt;
+                unknown(0)
+                ipv4(1)
+                ipv6(2)
+                dns(16)
+        &lt;/p&gt;&lt;/td;&gt;&lt;/tr&gt;
+        &lt;tr&gt;&lt;td&gt;&lt;b&gt;
+
+        sidaAlertDstAddress&lt;/b&gt;&lt;/td&gt;&lt;td&gt;
+        %parm[#12]%;&lt;/td&gt;&lt;td&gt;&lt;p;&gt;&lt;/p&gt;&lt;/td;&gt;&lt;/tr&gt;
+        &lt;tr&gt;&lt;td&gt;&lt;b&gt;
+
+        sidaAlertSrcPort&lt;/b&gt;&lt;/td&gt;&lt;td&gt;
+        %parm[#13]%;&lt;/td&gt;&lt;td&gt;&lt;p;&gt;&lt;/p&gt;&lt;/td;&gt;&lt;/tr&gt;
+        &lt;tr&gt;&lt;td&gt;&lt;b&gt;
+
+        sidaAlertDstPort&lt;/b&gt;&lt;/td&gt;&lt;td&gt;
+        %parm[#14]%;&lt;/td&gt;&lt;td&gt;&lt;p;&gt;&lt;/p&gt;&lt;/td;&gt;&lt;/tr&gt;&lt;/table&gt;
+        </descr>
+                <logmsg dest='logndisplay'>&lt;p&gt;
+                        Snort Event: sidaAlertGeneric trap received
+                        sidaSensorVersion=%parm[#1]%
+                        sidaSensorAddressType=%parm[#2]%
+                        sidaSensorAddress=%parm[#3]%
+                        sidaAlertTimeStamp=%parm[#5]%
+                        sidaAlertMsg=%parm[#6]%
+                        sidaAlertMoreInfo=%parm[#7]%
+                        sidaAlertSrcAddressType=%parm[#8]%
+                        sidaAlertSrcAddress=%parm[#9]%
+                        sidaAlertDstAddressType=%parm[#10]%
+                        sidaAlertDstAddress=%parm[#11]%
+                        sidaAlertSrcPort=%parm[#12]%
+                        sidaAlertDstPort=%parm[#13]%&lt;/p&gt;
+                </logmsg>
+        <severity>Warning</severity>
+</event>
+</events>
