@@ -1,5 +1,6 @@
 1.1.4 to 1.1.5
 ----------------------------------------------------------------------
+- Added an event for Snort traps. Thx Deven
 - Added Netbotz events.
 - Added a bunch more event definitions. Thx Mike and Jonathan
 - Added new Compaq event definitions. Thx Mike
